:construction: animates wonky cuz interval

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tonejs/midi": "^2.0.28",
+    "framer-motion": "^7.0.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
