--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tone": "^14.7.77"
+    "tone": "^14.7.77",
+    "webmidi": "^3.0.21"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
