--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.5",
     "tone": "^14.7.77",
-    "webmidi": "^3.0.21"
+    "webmidi": "^3.0.21",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "typescript": "4.7.4"
